fixed a layout bug

--- a/wiki/page_templates/reference/content_styling.css
+++ b/wiki/page_templates/reference/content_styling.css
@@ -67,7 +67,6 @@
 }
 
 #fgfuture_content div{
-    position:relative;
     overflow:auto;
 }
 #fgfuture_content div.image{
